<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.kosrat.alarm.MainActivity">

    <TextView
        android:id="@+id/tv_alarm_settings"
        android:layout_width="wrap_content"
        android:layout_height="?attr/listPreferredItemHeightSmall"
        android:gravity="center_vertical"
        android:text="@string/alarm_setting"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/colorAccent" />

    <EditText
        android:id="@+id/et_alarm_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_alarm_settings"
        android:hint="@string/alarm_time_hint"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/et_alarm_interval"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_alarm_time"
        android:hint="@string/alarm_interval_hint"
        android:inputType="numberDecimal" />

    <Switch
        android:id="@+id/st_alarm_repeat"
        android:layout_width="match_parent"
        android:layout_height="?attr/listPreferredItemHeightSmall"
        android:layout_below="@id/et_alarm_interval"
        android:text="@string/alarm_repeat" />

    <Switch
        android:id="@+id/st_alarm_exact"
        android:layout_width="match_parent"
        android:layout_height="?attr/listPreferredItemHeightSmall"
        android:layout_below="@id/st_alarm_repeat"
        android:text="@string/alarm_exact" />

    <Button
        android:id="@+id/btn_alarm_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/st_alarm_exact"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:text="@string/alarm_set"
        android:onClick="setAlarm"/>
</RelativeLayout>
